@@ -43,15 +43,7 @@
 			<menu id="org.gnome.evolution.mail.foldertree.popup" target="folder" factory = "org_gnome_create_option">
 			</menu>
 			<menu id="org.gnome.evolution.mail.folderview.popup" target="select" factory = "org_gnome_junk_settings"/>
-			<menu id="org.gnome.evolution.mail.folderview.popup" target="select">
-				<item
-					type="item"
-					path="21.gw_status_tracking"
-					label="Track Message Status"
-					enable="one"
-					visible="one"
-					activate="org_gnome_track_status"/>
-			</menu>
+			<menu id="org.gnome.evolution.mail.folderview.popup" target="select" factory = "org_gnome_track_status"/>
 		</hook>
 		<hook class="org.gnome.evolution.addressbook.config:1.0">
 			<group
